Update packages followed by battibass

--- a/watchers.yaml
+++ b/watchers.yaml
@@ -271,61 +271,45 @@ barvic:
 batinkov:
 - DQM/Integration
 battibass:
-- DataFormats/CSCRecHit
-- DataFormats/GEMRecHit
+- CalibMuon/Configuration
+- CalibMuon/DTCalibration
+- CalibMuon/DTDigiSync
+- CondFormats/DTObjects
+- CondFormats/RecoMuonObjects
+- DataFormats/DTDigi
 - DataFormats/DTRecHit
+- DataFormats/L1DTTrackFinder
 - DataFormats/MuonDetId
 - DataFormats/MuonReco
-- DataFormats/MuonSeed
-- DataFormats/RPCRecHit
-- DQMOffline/Muon
-- DQMOffline/Trigger
-- HLTrigger/Muon
-- HLTriggerOffline/Muon
+- DQM/DTMonitorClient
+- DQM/DTMonitorModule
+- DQM/Integration
+- DQMOffline/CalibMuon
+- EventFilter/DTRawToDigi
+- EventFilter/L1TXRawToDigi
+- Geometry/DTGeometry
+- Geometry/DTGeometryBuilder
+- L1Trigger/DTBti
+- L1Trigger/DTSectorCollector
+- L1Trigger/DTTraco
 - MuonAnalysis/MuonAssociators
-- RecoEgamma/EgammaHLTProducers
-- RecoMuon/Configuration
-- RecoMuon/CosmicMuonProducer
-- RecoMuon/DetLayers
-- RecoMuon/GlobalMuonProducer
-- RecoMuon/GlobalTrackFinder
-- RecoMuon/GlobalTrackingTools
-- RecoMuon/L2MuonIsolationProducer
-- RecoMuon/L2MuonProducer
-- RecoMuon/L2MuonSeedGenerator
-- RecoMuon/L3MuonIsolationProducer
-- RecoMuon/L3MuonProducer
-- RecoMuon/L3TrackFinder
-- RecoMuon/MeasurementDet
-- RecoMuon/MuonIdentification
-- RecoMuon/MuonIsolation
-- RecoMuon/MuonIsolationProducers
-- RecoMuon/MuonSeedGenerator
-- RecoMuon/Navigation
-- RecoMuon/Records
-- RecoMuon/StandAloneMuonProducer
-- RecoMuon/StandAloneTrackFinder
-- RecoMuon/TrackerSeedGenerator
-- RecoMuon/TrackingTools
-- RecoMuon/TransientTrackingRecHit
+- L1Trigger/DTTrigger
+- L1Trigger/DTTriggerServerPhi
+- L1Trigger/DTTriggerServerTheta
+- L1Trigger/DTUtilities
+- L1Trigger/L1TTwinMux
+- L1TriggerConfig/DTTPGConfig
+- L1TriggerConfig/DTTPGConfigProducers
+- RecoLocalMuon/Configuration
+- RecoLocalMuon/DTRecHit
+- RecoLocalMuon/DTSegment
 - SimDataFormats/DigiSimLinks
-- SimDataFormats/RPCDigiSimLink
-- SimDataFormats/TrackerDigiSimLink
-- SimDataFormats/TrackingAnalysis
-- SimGeneral/TrackingAnalysis
 - SimMuon/Configuration
+- SimMuon/DTDigitizer
+- SimMuon/Neutron
 - SimMuon/MCTruth
-- TrackingTools/KalmanUpdators
-- TrackingTools/PatternTools
-- TrackingTools/TrackAssociator
-- TrackingTools/TrackFitters
-- TrackingTools/TrackRefitter
-- TrackingTools/TrajectoryState
-- TrackingTools/TransientTrack
-- TrackingTools/TransientTrackingRecHit
-- Validation/MuonIdentification
-- Validation/MuonIsolation
-- Validation/RecoMuon
+- Validation/DTRecHits
+- Validation/MuonDTDigis
 cericeci:
 - DataFormats/CSCRecHit
 - DataFormats/GEMRecHit
