--- a/watchers.yaml
+++ b/watchers.yaml
@@ -1578,3 +1578,37 @@ fabiocos:
 - Utilities/RelMon
 - Validation/Geometry
 - Validation/MtdValidation
+abdoulline:
+- CondCore/HcalPlugins
+- CondFormats/HcalMapping
+- CondFormats/HcalObjects
+- CalibCalorimetry/HcalAlgos
+- CalibCalorimetry/HcalPlugins
+- CalibCalorimetry/HcalTPGAlgos
+- CalibCalorimetry/HcalTPGEventSetup
+- CalibCalorimetry/HcalTPGIO
+- CalibFormats/HcalObjects
+- DQM/HcalCommon
+- DQM/HcalMonitorClient
+- DQM/HcalMonitorModule
+- DQM/HcalMonitorTasks
+- DQM/HcalTasks
+- DQMOffline/Hcal
+- DataFormats/HcalCalibObjects
+- DataFormats/HcalDetId
+- DataFormats/HcalDigi
+- DataFormats/HcalRecHit
+- EventFilter/HcalRawToDigi
+- RecoLocalCalo/HcalLaserReco
+- RecoLocalCalo/HcalRecAlgos
+- RecoLocalCalo/HcalRecProducers
+- SimCalorimetry/HcalSimAlgos
+- SimCalorimetry/HcalSimProducers
+- SimCalorimetry/HcalTrigPrimAlgos
+- SimCalorimetry/HcalTrigPrimProducers
+- SimCalorimetry/HcalZeroSuppressionProducers
+- Validation/HcalDigis
+- Validation/HcalHits
+- Validation/HcalRecHits
+- Validation/CaloTowers
+
